Fix footer on IOS

--- a/src/components/page-footer/page-footer.component.scss
+++ b/src/components/page-footer/page-footer.component.scss
@@ -2,17 +2,27 @@
 @import './../../globals/styles/functions';
 
 .page-footer {
-  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  width: 100%;
+  height: $footer-height;
   background-color: $footer-color;
   border-top: 1px solid $footer-border-color;
   padding: 0;
   box-shadow: 0 -1px 10px 1px $footer-border-color;
+  align-items: center;
+
+  .footer-row {
+    width: 100%;
+  }
 
   .page-footer-link {
     cursor: pointer;
     display: block;
     width: 100%;
-    padding: 8px 0;
     @include user-select-none();
 
     &.active {
