--- a/src/globals/styles/_variables.scss
+++ b/src/globals/styles/_variables.scss
@@ -1,3 +1,5 @@
+$footer-height: 65px;
+
 $login-text-color: #12998e;
 $login-button-color: #c6f0ed;
 $login-button-text-color: #25716c;
